welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	if(nums(j)!=value){
			return 0
		}else{
			return -1
		}
	
	
	
	
	for (j<- 0 to 10){
	
	
		if(nums(j)!=value){
			return 5
		}else{
			return -1
		}
	
	
}

}
